[build-system]
requires = ['hatchling', "hatch-fancy-pypi-readme", "hatch-vcs"]
build-backend = "hatchling.build"

[project]
name = "hwoutils"
description = "Shared JAX-based utilities for the HWO direct imaging simulation suite — constants, conversions, and image transforms."
authors = [{ name = "Corey Spohn", email = "corey.a.spohn@nasa.gov" }]
dynamic = ['readme', 'version']
requires-python = ">=3.10"
license = { file = "LICENSE" }
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Science/Research",
  "License :: OSI Approved :: MIT License",
  "Programming Language :: Python :: 3",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = ["jax", "jaxlib"]
[project.optional-dependencies]
dev = ["pre-commit"]
docs = [
  "sphinx",
  "myst-nb",
  "sphinx-book-theme",
  "sphinx-autoapi",
  "sphinx_autodoc_typehints",
  "ipython",
  "matplotlib",
]
test = ["nox", "pytest", "hypothesis", "pytest-cov"]

[project.urls]
Homepage = "https://github.com/CoreySpohn/hwoutils"
Issues = "https://github.com/CoreySpohn/hwoutils/issues"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.hooks.vcs]
version-file = "src/hwoutils/_version.py"

[tool.hatch.metadata.hooks.fancy-pypi-readme]
content-type = "text/markdown"

[[tool.hatch.metadata.hooks.fancy-pypi-readme.fragments]]
path = "README.md"

[tool.ruff.lint]
select = ["B", "D", "E", "F", "I", "UP", "RUF"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[dependency-groups]
dev = ["astropy", "hypothesis"]

[tool.hatch.build.targets.wheel]
packages = ["src/hwoutils"]

[tool.hatch.build.targets.sdist]
exclude = ["/scripts", "/docs", "/tests", "/.github"]
